--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
     "react-scripts": "^5.0.1",
+    "recoil": "^0.7.7",
     "sort-by": "^1.2.0",
     "web-vitals": "^2.1.4"
   },
