chore: workflow에서 실행시 Deploy 되도록 변경
workflow에서 cicd를 run했을 때, deploy가 작동되도록 조건을 변경함.
다수의 조건을 사용하는 경우 ${{ 조건1 || 조건2 }} 형태로 작성함.

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -46,10 +46,10 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 
-  # Push가 발생했을 경우에는, 테스트 커버리지가 70% 이상인 경우에 S3로의 배포를 진행한다. -> 지금은 테스트 없이 배포만 진행
+  # Push 혹은 Run workflow가 발생했을 경우에는, 테스트 커버리지가 70% 이상인 경우에 S3로의 배포를 진행한다. -> 지금은 테스트 없이 배포만 진행
   deploy:
     runs-on: ubuntu-latest
-    if: github.event_name == 'push'
+    if: ${{ github.event_name == 'push' || github.event_name == 'workflow_dispatch' }}
     steps:
       - name: Checkout source code
         uses: actions/checkout@v3
