--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^9.1.3",
     "recoil": "^0.7.7",
+    "recoil-persist": "^5.1.0",
     "sort-by": "^1.2.0",
     "typeit-react": "^2.6.4",
     "web-vitals": "^2.1.4"
