--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
     "react-scripts": "^5.0.1",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "recoil": "^0.7.7",
     "recoil-persist": "^5.1.0",
