--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "chartjs-plugin-datalabels": "^2.2.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "mem": "^9.0.2",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
