--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mem": "^9.0.2",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
     "react-ga4": "^2.1.0",
     "react-router-dom": "^6.14.1",
