--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 # 개발 환경
 REACT_APP_GOOGLE_ANALYTICS=G-6L8N79F9RP
 NODE_ENV = development
-REACT_APP_API_ENDPOINT = https://dev.moview.io
+REACT_APP_API_ENDPOINT = http://localhost:5005
