refactor: 브랜치별 엔드 포인트 분리

--- a/.github/workflows/dev_push.yml
+++ b/.github/workflows/dev_push.yml
@@ -44,6 +44,9 @@ jobs:
       #        env:
       #          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Set up environment variables for dev branches
+        run: cp .env.production-dev .env.production
+
       - name: Build React
         run: npm run build
 
