--- a/.github/workflows/main_push.yml
+++ b/.github/workflows/main_push.yml
@@ -44,6 +44,9 @@ jobs:
 #        env:
 #          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Set up environment variables for main branch
+        run: cp .env.production-main .env.production
+
       - name: Build React
         run: npm run build
 
