--- a/.env.production-dev
+++ b/.env.production-dev
@@ -1,3 +1,3 @@
 # 배포 환경
 NODE_ENV = production
-REACT_APP_API_ENDPOINT = https://dev.moview.io:5005
+REACT_APP_API_ENDPOINT = http://dev.moview.io:5005
