chore: 윈도우환경에서 빌드할 수 있는 명령어 추가
Signed-off-by: JangSeHun <westreed@naver.com>

--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "start": "react-scripts start",
     "build": "GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build_win": "react-scripts build"
   },
   "eslintConfig": {
     "extends": [
