feat: KAKAO PIEXL SDK 설정
Production 환경에서만 작동하도록 조건을 추가함.

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 # 개발 환경
 REACT_APP_GOOGLE_ANALYTICS=G-6L8N79F9RP
 NODE_ENV = development
+REACT_APP_ENV = dev
 REACT_APP_KAKAO_SDK_ID = 6580366801861755327
 REACT_APP_API_ENDPOINT = http://localhost:5005
