--- a/.env
+++ b/.env
@@ -3,4 +3,5 @@ REACT_APP_GOOGLE_ANALYTICS=G-6L8N79F9RP
 NODE_ENV = development
 REACT_APP_ENV = dev
 REACT_APP_KAKAO_SDK_ID = 6580366801861755327
+REACT_APP_GOOGLE_ADS_TAG_ID=AW-11386062618
 REACT_APP_API_ENDPOINT = http://localhost:5005
